--- a/style.css
+++ b/style.css
@@ -199,6 +199,9 @@ input[type="checkbox"] {
 } .sub-heading-nine {
 	font-size: 1px;
 }
+.input_size::placeholder{
+    color: rgb(255, 255, 255);
+}
 
 .entire-content {
 	margin: auto;
